Date	Added

2006/11/15
	- New config settings in packet_athena.txt:
	  frame_size, if for some reason you want to use packets less than 1024
	  bytes in length
	  mode_neg, with which you can disable the Nagel Algorythm (the default is
	  yes), you may try turning it off to compare which one yields better
	  performance
2006/11/08
	* Merged official GS skill ranges (from Aegis login packet) [Skotlex]
	* Merged Ganbantein's delay being 2 secs. [Skotlex]
	* Merged cast time of 0.5 secs to Bulls Eye [Skotlex]
	* Merged cast time of 2 secs for Ground Drift [Skotlex]
2006/11/07
	* Added nosave mapflag for Guild Dungeons [KarLaeda]
2006/11/06
	* The config settings player_cloak_checl_type and monster_cloak_check_type
	  are updated (skill.conf) to give more fine-grained control:
	- &1 means to check for walls
	- &2 makes cloaking not end when using normal attacks 
	- &4 makes it not end when using skills.
	  Note that mobs by default will not uncloak now when using skills.
	* Added config settings exp_bonus_attacker and exp_bonus_max_attacker
	  (exp.conf) to specify how the exp bonus per attacker (and limit) should
	  be calculated. Default is +25% exp per attacker, capped to 12 attackers.
	  [Skotlex]
	* Behaviour change of party_even_share_bonus (party.conf), defaults to 0 as
	  there really is no even share bonus for parties, and when set, it's a
	  lineal bonus per party-member involved. [Skotlex]
2006/11/05
	* Added maplags for PowerNPC quest. [KarLaeda]
2006/11/01
	* Fixed start map name, according to the recent changes [KarLaeda]
2006/10/25
	* Merged config setting summon_flora_setting (skill.conf) which specifies
	  restrictions on the skill such as letting other people hit the floras, or
	  preventing more than one type of flora being summoned at a time. [Skotlex]
2006/10/20
	* Added &16 to the default emergency_call (skill.conf) setting. This means
	  that Emergency Call fails in "no warp to" maps (mainly, maps like Lhz3)
	  [Skotlex]