@@ -5,6 +5,13 @@ GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
 2006/11/17
+	* Merged updated behaviour of skill_max_tries where 0 means unlimited, and
+	  any other value is the amount of steal tries. [Skotlex]
+	* Merged ShadowJump and KiriKage not "teleporting" you on GVG maps.
+	  [Skotlex]
+	* Merged overlapping songs/dances causing dissonance/ugly dance level 1
+	  regardless of the levels involved. [Skotlex]
+	* Hp Conversion now silently fails when used at max sp. [Skotlex]
 	* Merged some cleanups in chat.c, including a possible crash fix. [Skotlex]
 2006/11/16
 	* Merged a debug version of map_freeblock_unlock to help fix an already
